--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3GamesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3GamesComponentPartial/Default.cshtml
@@ -29,7 +29,7 @@
 				<h2 class="posts-entry-title">Oyun</h2>
 			</div>
 			<div class="col-sm-6 text-sm-end">
-				<a href="category.html" class="read-more">Tümünü Gör</a>
+				<a href="/Blog/Index/1" class="read-more">Tümünü Gör</a>
 			</div>
 		</div>
 		<div class="row g-3">
