--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3BlogSeriesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3BlogSeriesComponentPartial/Default.cshtml
@@ -26,10 +26,10 @@
 	<div class="container">
 		<div class="row mb-4">
 			<div class="col-sm-6">
-				<h2 class="posts-entry-title">Dizi</h2>
+				<h2 class="posts-entry-title">Dizi/Film</h2>
 			</div>
 			<div class="col-sm-6 text-sm-end">
-				<a href="category.html" class="read-more">Tümünü Gör</a>
+				<a href="/Blog/Index/2" class="read-more">Tümünü Gör</a>
 			</div>
 		</div>
 		<div class="row g-3">
