--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3AnimesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3AnimesComponentPartial/Default.cshtml
@@ -29,7 +29,7 @@
 			<div class="col-sm-6">
 				<h2 class="posts-entry-title">Anime</h2>
 			</div>
-			<div class="col-sm-6 text-sm-end"><a href="category.html" class="read-more">Tümünü Gör</a></div>
+			<div class="col-sm-6 text-sm-end"><a href="/Blog/Index/3" class="read-more">Tümünü Gör</a></div>
 		</div>
 
 		<div class="row">
