--- a/Blogizm.WebUI/Views/User/Register.cshtml
+++ b/Blogizm.WebUI/Views/User/Register.cshtml
@@ -3,5 +3,124 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Register</h1>
+
+@{
+	ViewData["Title"] = "Login";
+	Layout = null;
+}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Blogizm Giriş Yap Sayfası</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="/Login_v4/images/icons/favicon.ico" />
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/vendor/bootstrap/css/bootstrap.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/fonts/iconic/css/material-design-iconic-font.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/vendor/animate/animate.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/vendor/css-hamburgers/hamburgers.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/vendor/animsition/css/animsition.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/vendor/select2/select2.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/vendor/daterangepicker/daterangepicker.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/Login_v4/css/util.css">
+	<link rel="stylesheet" type="text/css" href="/Login_v4/css/main.css">
+	<!--===============================================================================================-->
+</head>
+<body>
+
+	<div class="limiter">
+		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
+			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+				<form class="login100-form validate-form">
+					<span class="login100-form-title p-b-49">
+						Kayıt Ol
+					</span>
+
+					<div class="wrap-input100 validate-input m-b-23" data-validate="Username is required">
+						<span class="label-input100">Adınız</span>
+						<input class="input100" type="text" name="username" placeholder="Adınızı Giriniz">
+						<span class="focus-input100" data-symbol="&#xf206;"></span>
+					</div>
+
+					<div class="wrap-input100 validate-input m-b-23" data-validate="Username is required">
+						<span class="label-input100">Soyadınız</span>
+						<input class="input100" type="text" name="username" placeholder="Soyadınızı Giriniz">
+						<span class="focus-input100" data-symbol="&#xf206;"></span>
+					</div>
+					<div class="wrap-input100 validate-input m-b-23" data-validate="Username is required">
+						<span class="label-input100">Email Adresiniz</span>
+						<input class="input100" type="email" name="username" placeholder="Email adresinizi giriniz">
+						<span class="focus-input100" data-symbol="&#xf206;"></span>
+					</div>
+					<div class="wrap-input100 validate-input" data-validate="Password is required">
+						<span class="label-input100">Şifre</span>
+						<input class="input100" type="password" name="pass" placeholder="Şifrenizi giriniz">
+						<span class="focus-input100" data-symbol="&#xf190;"></span>
+					</div>
+					<br />
+
+
+					<div class="container-login100-form-btn">
+						<div class="wrap-login100-form-btn">
+							<div class="login100-form-bgbtn"></div>
+							<button type="submit" class="login100-form-btn">
+								Kayıt Ol
+							</button>
+						</div>
+					</div>
+					<br />
+					<div class="container-login100-form-btn">
+						<div class="wrap-login100-form-btn">
+							<div class="login100-form-bgbtn"></div>
+							<button class="login100-form-btn">
+								<a href="/User/Login" style="color:white">
+							       Giriş Yap
+								</a>
+							</button>
+						</div>
+					</div>
+
+
+
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+	<div id="dropDownSelect1"></div>
+
+	<!--===============================================================================================-->
+	<script src="/Login_v4/vendor/jquery/jquery-3.2.1.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="/Login_v4/vendor/animsition/js/animsition.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="/Login_v4/vendor/bootstrap/js/popper.js"></script>
+	<script src="/Login_v4/vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="/Login_v4/vendor/select2/select2.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="/Login_v4/vendor/daterangepicker/moment.min.js"></script>
+	<script src="/Login_v4/vendor/daterangepicker/daterangepicker.js"></script>
+	<!--===============================================================================================-->
+	<script src="/Login_v4/vendor/countdowntime/countdowntime.js"></script>
+	<!--===============================================================================================-->
+	<script src="/Login_v4/js/main.js"></script>
+
+</body>
+</html>
+
+
 
