--- a/Blogizm.WebUI/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using Blogizm.Dtos.BlogDtos
 @using Blogizm.Dtos.CategoryDtos
 @using Blogizm.Dtos.BlogDetailDtos
+@using Blogizm.Dtos.UserDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
