--- a/Blogizm.WebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -25,6 +25,28 @@
 							</li>
 							<li><a href="/Contact/Index">İletişim</a></li>
 
+							<li class="has-children">
+								<a href="javascript:void(0)">Hesabım</a>
+								<ul class="dropdown">
+									@if (User.Identity.IsAuthenticated)
+									{
+										var token = User.Claims.FirstOrDefault(c => c.Type == "accessToken")?.Value;
+										if (token != null)
+										{
+											<li><a style="text-decoration:none" href="/User/Profile">  Profilim</a></li>
+											<li><a style="text-decoration:none" href="/User/Logout">Çıkış Yap</a></li>
+										}
+										
+									}
+									else
+									{
+										<li><a style="text-decoration:none" href="/User/Login"> Giriş Yap</a></li>
+										<li><a style="text-decoration:none" href="/User/Register"> Kayıt Ol</a></li>
+									}
+									
+
+								</ul>
+							</li>
 						</ul>
 					</div>
 					<div class="col-2 text-end">
