--- a/Blogizm.WebUI/Views/Shared/Components/_BlogDetailAuthorComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_BlogDetailAuthorComponentPartial/Default.cshtml
@@ -1,17 +1,10 @@
-﻿         <!-- END sidebar-box -->
+﻿@model GetAuthorByBlogIdDto
 <div class="sidebar-box">
     <div class="bio text-center">
-        <img src="images/person_2.jpg" alt="Image Placeholder" class="img-fluid mb-3">
+        <img src="@Model.AuthorImage" alt="@Model.AuthorFullname" class="img-fluid mb-3">
         <div class="bio-body">
-            <h2>Hannah Anderson</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem facilis sunt repellendus excepturi beatae porro debitis voluptate nulla quo veniam fuga sit molestias minus.</p>
-            <p><a href="#" class="btn btn-primary btn-sm rounded px-2 py-2">Read my bio</a></p>
-            <p class="social">
-                <a href="#" class="p-2"><span class="fa fa-facebook"></span></a>
-                <a href="#" class="p-2"><span class="fa fa-twitter"></span></a>
-                <a href="#" class="p-2"><span class="fa fa-instagram"></span></a>
-                <a href="#" class="p-2"><span class="fa fa-youtube-play"></span></a>
-            </p>
+            <h2>@Model.AuthorFullname</h2>
+            <p class="mb-4">@Model.AuthorDescription</p>
         </div>
     </div>
 </div>
