--- a/Blogizm.WebUI/Views/Shared/Components/_BlogDetailContentComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_BlogDetailContentComponentPartial/Default.cshtml
@@ -1,30 +1,42 @@
 ﻿@model ResultBlogDetailContentDto
 
 <div class="post-content-body">
-<p>@Model.title</p>
+<h3>@Model.title</h3>
+<p>@Model.description</p>
     <div class="row my-4">
         @if (Model.blogImage1 != null)
         {
-            <div class="col-md-4 col-12 mb-4">
+            <div class="col-md-12 mb-4">
                 <img src="@Model.blogImage1" alt="Image placeholder" class="img-fluid rounded">
             </div>
         }
 
         @if (Model.blogImage2 != null)
         {
-            <div class="col-md-4 col-12 mb-4">
+            <div class="col-md-6 mb-4">
                 <img src="@Model.blogImage2" alt="Image placeholder" class="img-fluid rounded">
             </div>
         }
 
         @if (Model.blogImage3 != null)
         {
-            <div class="col-md-4 col-12 mb-4">
+            <div class="col-md-6 mb-4">
                 <img src="@Model.blogImage3" alt="Image placeholder" class="img-fluid rounded">
             </div>
         }
     </div>
-
+    <p>@Model.subdescription</p>
+    @if (Model.videoUrl != null && Model.videoUrl!="")
+    {
+        <div class="video-container">
+            <iframe src="@Html.Raw(Model.videoUrl)"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+            </iframe>
+        </div>
+    }
 
 
 </div>
