--- a/Blogizm.WebUI/Areas/Admin/Views/AdminBlog/CreateBlog.cshtml
+++ b/Blogizm.WebUI/Areas/Admin/Views/AdminBlog/CreateBlog.cshtml
@@ -33,6 +33,10 @@
                                 <input type="text" autocomplete="off" class="form-control" asp-for="Description" id="exampleInputPassword1">
                             </div>
                             <div class="form-group">
+                                <label for="exampleInputPassword1">Blog Alt Açıklama</label>
+                                <input type="text" autocomplete="off" class="form-control" asp-for="SubDescription" id="exampleInputPassword1">
+                            </div>
+                            <div class="form-group">
                                 <label for="exampleInputPassword1">Blog Kapak Resim URL</label>
                                 <input type="text" autocomplete="off" class="form-control" asp-for="CoverImageUrl" id="exampleInputPassword1">
                             </div>
