--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3BlogSeriesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3BlogSeriesComponentPartial/Default.cshtml
@@ -37,23 +37,21 @@
 				var relativeTime = GetRelativeTime(data.CreatedDate);
 				<div class="col-md-4">
 					<div class="blog-entry">
-						<a href="single.html" class="img-link">
+						<a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" class="img-link">
 							<img style="width:100%;height:250px" src="@data.CoverImageUrl" alt="@data.Title" class="img-fluid">
 						</a>
 						<br />
-						<h2><a href="single.html">@data.Title</a></h2>
+						<h2><a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
 						<p id="blogseriesdesc-@data.BlogId">@data.Description</p>
 						<span class="date" style="float:right" >@relativeTime</span>
 						
-					<a href="single.html" class="btn btn-sm btn-outline-primary">Devamını Oku</a>
+						<a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" class="btn btn-sm btn-outline-primary">Devamını Oku</a>
 					
 
 						<script>
 							document.querySelectorAll('[id^="blogseriesdesc-"]').forEach(element => {
-								const text = element.textContent; // Veya innerText
-								const substringText = text.substring(0, 150); // İlk 100 karakteri al
-								console.log("Text:", text);
-								console.log("Substring Text:", substringText);
+								const text = element.textContent; 
+								const substringText = text.substring(0, 150); 
 								element.textContent = substringText + "...";
 							});
 						</script>
