--- a/Blogizm.WebUI/Views/Shared/Components/_BlogPopularPostComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_BlogPopularPostComponentPartial/Default.cshtml
@@ -1,40 +1,24 @@
-﻿<div class="sidebar-box">
-    <h3 class="heading">Popular Posts</h3>
+﻿@model List<Get3BlogByCategoryIdDto>
+<div class="sidebar-box">
+    <h3 class="heading">Diğer Bloglar</h3>
     <div class="post-entry-sidebar">
         <ul>
-            <li>
-                <a href="">
-                    <img src="images/img_1_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                    <div class="text">
-                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                        <div class="post-meta">
-                            <span class="mr-2">March 15, 2018 </span>
+            @foreach (var data in Model)
+            {
+                <li>
+                    <a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">
+                        <img src="@data.CoverImageUrl" alt="Image placeholder" class="me-4 rounded">
+                        <div class="text">
+                            <h4>@data.Title</h4>
+                            <div class="post-meta">
+                                <span class="mr-2">@data.CreatedDate.ToShortDateString() </span>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="images/img_2_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                    <div class="text">
-                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                        <div class="post-meta">
-                            <span class="mr-2">March 15, 2018 </span>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="images/img_3_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-                    <div class="text">
-                        <h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-                        <div class="post-meta">
-                            <span class="mr-2">March 15, 2018 </span>
-                        </div>
-                    </div>
-                </a>
-            </li>
+                    </a>
+                </li>
+            }
+
+
         </ul>
     </div>
 </div>
