Social Media Dto Added in Web UI

--- a/Blogizm.WebUI/Views/_ViewImports.cshtml
+++ b/Blogizm.WebUI/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using Blogizm.Dtos.CategoryDtos
 @using Blogizm.Dtos.BlogDetailDtos
 @using Blogizm.Dtos.UserDtos
+@using Blogizm.Dtos.SocialMediaDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
