--- a/Blogizm.WebUI/Views/Blog/Index.cshtml
+++ b/Blogizm.WebUI/Views/Blog/Index.cshtml
@@ -4,10 +4,32 @@
     Layout = "~/Views/UILayout/Index.cshtml";
     var category = Model[0].CategoryName;
     var count =  ViewBag.count;
-   
+
     var firstpage = 1;
 }
+@functions {
+    public string GetRelativeTime(DateTime createdDate)
+    {
+        var timeSpan = DateTime.Now - createdDate;
 
+        if (timeSpan.TotalMinutes == 0)
+        {
+            return $"{(int)timeSpan.TotalSeconds} saniye önce";
+        }
+        if (timeSpan.TotalMinutes < 60)
+        {
+            return $"{(int)timeSpan.TotalMinutes} dakika önce";
+        }
+        else if (timeSpan.TotalHours < 24)
+        {
+            return $"{(int)timeSpan.TotalHours} saat önce";
+        }
+        else
+        {
+            return $"{(int)timeSpan.TotalDays} gün önce";
+        }
+    }
+}
 <div class="hero overlay inner-page bg-primary py-5">
     <div class="container">
         <div class="row align-items-center justify-content-center text-center pt-5">
@@ -24,6 +46,7 @@
         <div class="row posts-entry">
             <div class="col-lg-8">
                 @foreach(var data in Model){
+                    string relativetime = GetRelativeTime(data.CreatedDate);
                     <div class="blog-entry d-flex blog-entry-search-item">
                         <div>
                             <a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" class="img-link me-4">
@@ -31,8 +54,8 @@
                             </a>
                         </div>
                         <div>
-                           
-                            <span class="date"> @data.CreatedDate.ToShortDateString() <a href="#" style="text-decoration:none">@data.CategoryName</a></span>
+
+                            <span class="date"> @relativetime <a href="#" style="text-decoration:none">@data.CategoryName</a></span>
                             <h2><a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" style="text-decoration:none">@data.Title</a></h2>
                             <p>@data.Description</p>
                             <p><a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" class="btn btn-sm btn-outline-primary">Devamını Oku</a></p>
