--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3GamesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3GamesComponentPartial/Default.cshtml
@@ -38,11 +38,11 @@
 				var relativeTime = GetRelativeTime(data.CreatedDate);
 				<div class="col-md-4">
 					<div class="blog-entry">
-						<a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" class="img-link">
+						<a  href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId" class="img-link">
 							<img style="width:100%;height:250px" src="@data.CoverImageUrl" alt="@data.Title" class="img-fluid">
 						</a>
 						<br />
-						<h2><a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
+						<h2><a style="text-decoration:none" href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
 						<p id="bloggamesdesc-@data.BlogId">@data.Description</p>
 						<span class="date" style="float:right">@relativeTime</span>
 
