--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3BlogSeriesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3BlogSeriesComponentPartial/Default.cshtml
@@ -41,7 +41,7 @@
 							<img style="width:100%;height:250px" src="@data.CoverImageUrl" alt="@data.Title" class="img-fluid">
 						</a>
 						<br />
-						<h2><a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
+						<h2><a style="text-decoration:none" href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
 						<p id="blogseriesdesc-@data.BlogId">@data.Description</p>
 						<span class="date" style="float:right" >@relativeTime</span>
 						
