--- a/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3AnimesComponentPartial/Default.cshtml
+++ b/Blogizm.WebUI/Views/Shared/Components/_DefaultTop3AnimesComponentPartial/Default.cshtml
@@ -41,10 +41,10 @@
 						<div class="excerpt">
 
 
-							<h2><a href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
+							<h2><a style="text-decoration:none" href="/Blog/BlogDetail/@data.BlogId?param=@data.CategoryId">@data.Title</a></h2>
 							<div class="post-meta align-items-center text-left clearfix">
-								<figure class="author-figure mb-0 me-3 float-start"><img src="@data.BlogImage1" alt="Image" class="img-fluid"></figure>
-								<span class="d-inline-block mt-1">Yazar: <a href="#">@data.AuthorName</a></span>
+								<figure class="author-figure mb-0 me-3 float-start"><img src="@data.AuthorImage" alt="Image" class="img-fluid"></figure>
+								<span class="d-inline-block mt-1">Yazar: <a style="text-decoration:none" href="#">@data.AuthorName</a></span>
 								<span>@relativetime</span>
 							</div>
 
